WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300415
Unable to remove all dynamic or session rules
https://bugs.webkit.org/show_bug.cgi?id=300415
Summary
Unable to remove all dynamic or session rules
Elijah Sawyers
Reported
2025-10-08 16:09:40 PDT
rdar://162148560
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2025-10-08 16:21:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52032
EWS
Comment 2
2025-10-09 09:15:30 PDT
Committed
301263@main
(fcde62dc8703): <
https://commits.webkit.org/301263@main
> Reviewed commits have been landed. Closing PR #52032 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug